chore: configure biome.jsonc to format typescript

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,10 +1,8 @@
 {
   "$schema": "https://biomejs.dev/schemas/latest/schema.json",
+  "formatter": { "indentStyle": "space" },
   "files": {
-    "includes": [
-      "./components/**",
-      "./entrypoints/**"
-    ]
+    "includes": ["./components/**", "./entrypoints/**"]
   },
   "linter": {
     "rules": {
