--- a/biome.jsonc
+++ b/biome.jsonc
@@ -7,7 +7,21 @@
   "linter": {
     "rules": {
       "style": {
-        "noNonNullAssertion": "off"
+        "noNonNullAssertion": "off",
+        "useNamingConvention": {
+          "level": "warn",
+          "options": {
+            "strictCase": true,
+            "conventions": [
+              {
+                "selector": { "kind": "function" },
+                "formats": ["camelCase"]
+              }
+            ]
+          }
+        },
+        "useGraphqlNamingConvention": "warn",
+        "useFilenamingConvention": "error"
       }
     }
   },
